--- a/html/loginform.html
+++ b/html/loginform.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>loginForm</title>
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@2.51.5/dist/full.css"
       rel="stylesheet"
@@ -13,29 +13,23 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div
-      class="relative flex flex-col items-center justify-center h-screen overflow-hidden"
-    >
-      <div
-        class="w-full p-6 bg-white border-t-4 border-gray-600 rounded-md shadow-md border-top lg:max-w-lg"
-      >
-        <h1 class="text-3xl font-semibold text-center text-gray-700">
-          mediCHAT
-        </h1>
+    <div class="flex flex-col items-center justify-center h-screen">
+      <div class="w-full p-10 max-w-lg">
+        <h1 class="text-3xl font-semibold text-center">mediCHAT</h1>
         <form class="space-y-4">
           <div>
             <label class="label">
-              <span class="text-base label-text">Username</span>
+              <span class="text-base">Username</span>
             </label>
             <input
               type="text"
-              placeholder="Type your username"
+              placeholder="Type your Username"
               class="w-full input input-bordered"
             />
           </div>
           <div>
             <label class="label">
-              <span class="text-base label-text">Password</span>
+              <span class="text-base">Password</span>
             </label>
             <input
               type="password"
@@ -43,12 +37,10 @@
               class="w-full input input-bordered"
             />
           </div>
-          Don't have an account?
-          <a
-            href="#"
-            class="text-base text-gray-600 hover:underline hover:text-blue-600"
-            >Sign up</a
-          >
+          <div>
+            Don't have an account?
+            <a href="#" class="text-base text-gray-500">Sign up</a>
+          </div>
           <div>
             <button class="btn btn-block">Login</button>
           </div>
