feat: Add own logo & favicon

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="컴퓨터공학기초캡스톤디자인 Help Me! Medic Bot!"
+      content="Hospital information and recommendation services"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
