feat: Create SignUpForm.html

--- a/html/loginform.html
+++ b/html/loginform.html
@@ -19,11 +19,11 @@
         <form class="space-y-4">
           <div>
             <label class="label">
-              <span class="text-base">Username</span>
+              <span class="text-base">ID</span>
             </label>
             <input
               type="text"
-              placeholder="Type your Username"
+              placeholder="Type your ID"
               class="w-full input input-bordered"
             />
           </div>
